--- a/main.html
+++ b/main.html
@@ -4,10 +4,19 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	
 </head>
-
+	
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why Should I become a developer?</h1>
+	<p>
+		Web development is a fast-paced and challenging career,
+		centered on creative problem-solving and continuous innovation.
+        As a web developer you’ll work with a multidisciplinary team of 
+		designers, other developers, and marketers to realize your projects.
+		It’s no wonder, then, that it’s a much-praised area to get into to.
+	</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
