--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 	
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Why Should I become a developer?</h1>
+	<h1>"Why I want to become a developer?"</h1>
 	<p>
 		Web development is a fast-paced and challenging career,
 		centered on creative problem-solving and continuous innovation.
